cotoami_desktop/ui/assets/css/app/_app.scss
:root {
  --header-height: 36px;
  --footer-height: 25px;
  --max-text-content-width: 45rem;
  --max-article-width: calc(var(--max-text-content-width) + var(--block-spacing-horizontal));
  --selection-color: orange;

  // override pico's custom properties
  --form-element-spacing-vertical: 0.5rem;
}

div.app {
  position: relative;
  width: 100%;
  height: 100%;

  >header {
    height: var(--header-height);
    border-bottom: 1px solid var(--pane-border-color);
  }

  #app-body {
    display: flex;
    flex-direction: row;

    nav.nodes {
      flex: 0 0 45px;
      border-right: 1px solid var(--pane-border-color);
    }

    div.main-split-pane {
      flex: 1;
      min-width: 0; // let this item shrink below the content size

      &.search-layout {

        // Prevent search pane from being hidden by other panes
        >div.separator,
        section.search * {
          z-index: 1000;
        }
      }
    }

    // flow and stock
    main {
      display: flex;
      flex-direction: row;

      .split-pane {
        width: 100%;
      }

      .occupying {
        flex: 1 !important;
      }
    }
  }

  >footer {
    height: var(--footer-height);
    border-top: 1px solid var(--pane-border-color);
  }

  .log-view {
    position: absolute;
    right: 0;
    bottom: 0;
  }

  section.message {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    border: 2px dotted var(--pane-border-color);
    border-radius: 8px;
    margin-bottom: 20px;
    padding: 16px;
    background-color: var(--card-background-color);

    span.material-symbols {
      font-size: 20px;
      margin-right: 5px;

      &.completed {
        color: var(--form-element-valid-border-color);
      }
    }
  }

  button span.shortcut-help {
    margin-left: 4px;
    opacity: .7;
    font-size: 0.8rem;
    vertical-align: text-top;
  }

  button.help {
    margin-left: 8px;
    vertical-align: middle;
    opacity: 0.5;

    &:disabled {
      opacity: 1;
    }
  }

  section.help {
    position: relative;
    border: 1px dashed var(--pane-border-color);
    border-radius: var(--border-radius);
    margin-bottom: 20px;
    padding: 16px;

    button.close {
      position: absolute;
      top: 6px;
      right: 6px;
      margin: 0;
      padding: 0;
      width: 16px;
      height: 16px;
      background-size: auto 0.8rem;
    }
  }

  .validation-error {
    font-size: 95%;
    color: var(--error-color)
  }

  span.node {
    img.node-icon {
      width: 26px;
      height: 26px;
      border-radius: 4px;
      vertical-align: middle;
      margin-right: 6px;
    }

    .name {
      vertical-align: middle;
      font-weight: 700;
    }
  }

  section.input-file {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    border: 2px dashed var(--pane-border-color);
    border-radius: 4px;

    &.drag-active {
      border-color: var(--color);
    }

    p {
      margin: 0;
      padding: 0;
      font-size: 1.1rem;
      color: var(--muted-color);
      text-align: center;
    }
  }

  section.client-nodes-count {
    code {
      margin-right: 2px;
    }

    span.separator {
      margin-left: 8px;
      margin-right: 6px;
    }
  }

  section.node-description {
    padding: var(--spacing);
    background-color: var(--embedded-cotobackground-color);

    section.media-content {
      margin-bottom: 8px;
    }

    section.text-content * {
      font-size: 0.9rem;
    }
  }
}

